# StoStoneSolver

./: .gitignore  000-solved-old.txt  001-solved.txt  002-solved-old.txt  LICENSE  README.md  Solver.py  adjChecker.py  backtrack.py  connChecker.py  domainBuilder.py  domainGen.py  gridUtils.py  implementation_plan.md  iterators.py  pyproject.toml  pytest.ini  readPuzzle.py  solver_cli.py  solver_runner.py
apps/godot/stoStoneGame/: icon.svg.import  project.godot
docs/: architecture.md
puzzles/: 000-000.txt  000-001.txt  000-002.txt  000.txt  001-000-1.txt  001-000.txt  001-001.txt  001-002-YP.txt  001.txt  002.txt  162-001.txt  162-002.txt  162-003.txt  162-004-corrected.txt  162-004.txt  162-005.txt  162-006.txt  162-007.txt  162-008.txt  162-009.txt  162-010.txt  162-011.txt  162-012.txt  165-001.txt  165-003.txt  168-002.txt  MG-001-001.txt  YP-002.txt  nogiven-000.txt
shared/schemas/: DebugPack.schema.json  HintPlanDTO.schema.json  PlayerProgressDTO.schema.json  PuzzleDTO.schema.json  PuzzleManifest.schema.json  PuzzlePack.schema.json  SolutionDTO.schema.json
src/stostone/: __init__.py  cli.py  engine.py  models.py
src/stostone/assembly/: __init__.py
src/stostone/compat/: __init__.py  backtrack.py  readPuzzle.py  (+2 more)
stostone/: __init__.py
tasks/: lessons.md  todo.md  todo_game.md
tests/: conftest.py  test_calibration.py  test_calibration_corpus.py  test_cli.py  test_compat.py  test_core.py  test_engine.py  test_generator.py  test_io_puzpre.py  test_models.py  test_pack_export.py  test_solver_service.py  test_solver_state_ops.py  test_solver_validation.py
(+33 files in other folders)
