[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stostone"
version = "0.1.0"
description = "Sto-Stone solver core prepared for future generation and gameplay layers"
requires-python = ">=3.14"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

